Changed functions that always return false, and deleted all commented out code

--- a/htmlReport/ns-4/sources/source-2.html
+++ b/htmlReport/ns-4/sources/source-2.html
@@ -78,8 +78,8 @@ Current scope:     <a href="../../index.html">all classes</a>
 &nbsp;
 &nbsp;import com.spenditure.database.TransactionPersistence;
 &nbsp;import com.spenditure.logic.CategoryHandler;
-&nbsp;import com.spenditure.object.DateNewestFirstComparator;
-&nbsp;import com.spenditure.object.DateOldestFirstComparator;
+&nbsp;import com.spenditure.object.Comparison.DateNewestFirstComparator;
+&nbsp;import com.spenditure.object.Comparison.DateOldestFirstComparator;
 &nbsp;import com.spenditure.object.DateTime;
 &nbsp;import com.spenditure.object.IDateTime;
 &nbsp;import com.spenditure.object.Transaction;
