Refactored UserManager into UserHandler; re-wrote GoalHandler tests to utilize Mockito

--- a/htmlReport/ns-3/sources/source-1.html
+++ b/htmlReport/ns-3/sources/source-1.html
@@ -79,7 +79,7 @@ Current scope:     <a href="../../index.html">all classes</a>
 &nbsp;import android.annotation.SuppressLint;
 &nbsp;
 &nbsp;import com.spenditure.database.CategoryPersistence;
-&nbsp;import com.spenditure.logic.UserManager;
+&nbsp;import com.spenditure.logic.UserHandler;
 &nbsp;import com.spenditure.logic.exceptions.InvalidCategoryException;
 &nbsp;import com.spenditure.logic.exceptions.InvalidUserInformationException;
 &nbsp;import com.spenditure.object.MainCategory;
