--- a/htmlReport/ns-8/sources/source-6.html
+++ b/htmlReport/ns-8/sources/source-6.html
@@ -132,7 +132,7 @@ Current scope:     <a href="../../index.html">all classes</a>
 &nbsp;
 &nbsp;import com.example.spenditure.R;
 &nbsp;import com.google.android.material.bottomnavigation.BottomNavigationView;
-&nbsp;import com.spenditure.logic.UserManager;
+&nbsp;import com.spenditure.logic.UserHandler;
 &nbsp;import com.spenditure.logic.exceptions.InvalidUserInformationException;
 &nbsp;import com.spenditure.presentation.report.ViewReportActivity;
 &nbsp;
