--- a/htmlReport/ns-a/sources/source-3.html
+++ b/htmlReport/ns-a/sources/source-3.html
@@ -222,7 +222,7 @@ Current scope:     <a href="../../index.html">all classes</a>
 &nbsp;import com.spenditure.logic.CategoryHandler;
 &nbsp;import com.spenditure.logic.GeneralReportHandler;
 &nbsp;import com.spenditure.logic.ReportManager;
-&nbsp;import com.spenditure.logic.UserManager;
+&nbsp;import com.spenditure.logic.UserHandler;
 &nbsp;import com.spenditure.object.DateTime;
 &nbsp;import com.spenditure.object.IDateTime;
 &nbsp;import com.spenditure.object.IMainCategory;
