--- a/htmlReport/ns-b/sources/source-5.html
+++ b/htmlReport/ns-b/sources/source-5.html
@@ -148,7 +148,7 @@ Current scope:     <a href="../../index.html">all classes</a>
 &nbsp;import com.example.spenditure.R;
 &nbsp;import com.google.android.material.bottomnavigation.BottomNavigationView;
 &nbsp;import com.spenditure.logic.TransactionHandler;
-&nbsp;import com.spenditure.logic.UserManager;
+&nbsp;import com.spenditure.logic.UserHandler;
 &nbsp;import com.spenditure.object.Transaction;
 &nbsp;import com.spenditure.presentation.BottomNavigationHandler;
 &nbsp;import com.spenditure.presentation.category.ViewCategoryActivity;
