--- a/htmlReport/ns-8/sources/source-2.html
+++ b/htmlReport/ns-8/sources/source-2.html
@@ -112,7 +112,7 @@ Current scope:     <a href="../../index.html">all classes</a>
 &nbsp;import android.widget.Toast;
 &nbsp;
 &nbsp;import com.example.spenditure.R;
-&nbsp;import com.spenditure.logic.UserManager;
+&nbsp;import com.spenditure.logic.UserHandler;
 &nbsp;import com.spenditure.logic.exceptions.InvalidUserInformationException;
 &nbsp;import com.spenditure.presentation.report.ViewReportActivity;
 &nbsp;
