--- a/htmlReport/ns-9/sources/source-1.html
+++ b/htmlReport/ns-9/sources/source-1.html
@@ -142,7 +142,7 @@ Current scope:     <a href="../../index.html">all classes</a>
 &nbsp;import com.example.spenditure.R;
 &nbsp;import com.google.android.material.bottomsheet.BottomSheetDialogFragment;
 &nbsp;import com.spenditure.logic.CategoryHandler;
-&nbsp;import com.spenditure.logic.UserManager;
+&nbsp;import com.spenditure.logic.UserHandler;
 &nbsp;import com.spenditure.logic.exceptions.InvalidCategoryException;
 &nbsp;import com.spenditure.presentation.IOnDialogCloseListener;
 &nbsp;
