--- a/htmlReport/ns-9/sources/source-5.html
+++ b/htmlReport/ns-9/sources/source-5.html
@@ -116,7 +116,7 @@ Current scope:     <a href="../../index.html">all classes</a>
 &nbsp;import com.google.android.material.bottomnavigation.BottomNavigationView;
 &nbsp;import com.google.android.material.floatingactionbutton.FloatingActionButton;
 &nbsp;import com.spenditure.logic.CategoryHandler;
-&nbsp;import com.spenditure.logic.UserManager;
+&nbsp;import com.spenditure.logic.UserHandler;
 &nbsp;import com.spenditure.presentation.BottomNavigationHandler;
 &nbsp;import com.spenditure.presentation.TouchHelper;
 &nbsp;import com.spenditure.presentation.transaction.CreateTransactionActivity;
