--- a/htmlReport/ns-a/sources/source-1.html
+++ b/htmlReport/ns-a/sources/source-1.html
@@ -90,7 +90,7 @@ Current scope:     <a href="../../index.html">all classes</a>
 &nbsp;import com.spenditure.logic.CategoryHandler;
 &nbsp;import com.spenditure.logic.GeneralReportHandler;
 &nbsp;import com.spenditure.logic.ReportManager;
-&nbsp;import com.spenditure.logic.UserManager;
+&nbsp;import com.spenditure.logic.UserHandler;
 &nbsp;import com.spenditure.object.MainCategory;
 &nbsp;import com.spenditure.presentation.UIUtility;
 &nbsp;
