--- a/htmlReport/ns-b/sources/source-1.html
+++ b/htmlReport/ns-b/sources/source-1.html
@@ -130,7 +130,7 @@ Current scope:     <a href="../../index.html">all classes</a>
 &nbsp;import com.google.android.material.bottomnavigation.BottomNavigationView;
 &nbsp;import com.spenditure.logic.TransactionHandler;
 &nbsp;import com.spenditure.logic.CategoryHandler;
-&nbsp;import com.spenditure.logic.UserManager;
+&nbsp;import com.spenditure.logic.UserHandler;
 &nbsp;import com.spenditure.logic.exceptions.InvalidTransactionException;
 &nbsp;import com.spenditure.object.DateTime;
 &nbsp;import com.spenditure.object.Transaction;
